@@ -19,6 +19,5 @@
 
 <body>
   <%= yield %>
-  <%= render 'layouts/flash_messages' %>
 </body>
 </html>
